# Spruce

./: CMakeLists.txt  README.md  main.cpp
src/: graph_preprocess.cpp  graph_preprocess.h  header.h  index_algorithms.cpp  index_algorithms.h  memory_analysis.cpp  memory_analysis.h  spruce_transaction.cpp  spruce_transaction.h  succinct_algorithms.cpp  succinct_algorithms.h
test/: demo.cpp  demo.h
